# quiz_bot

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  rustfmt.toml
entity/src/: answer.rs  lib.rs  prelude.rs  question.rs  quiz.rs  quiz_creation.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20230603_113226_create_quiz_table.rs  m20230603_120131_create_question_table.rs  m20230603_122017_create_answer_table.rs  m20230603_161257_create_quiz_creation_table.rs
migrations/2023-06-03-043300_create_quizzes/: down.sql  up.sql
migrations/2023-06-03-044052_create_questions/: up.sql
migrations/2023-06-03-044909_create_answers/: down.sql  up.sql
src/: commands.rs  database.rs  main.rs
src/commands/: creation_commands.rs
src/database/: models.rs  schema.rs
src/models/: answer.rs  mod.rs  question.rs  quiz.rs
