[package]
name = "quiz_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.26.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
poise = "0.5.5"
regex = "1.8.3"
diesel = { version = "2.1.0", features = ["postgres"] }
dotenvy = "0.15.7"
diesel_migrations = "2.1.0"
rand = "0.8.5"