[package]
name = "quiz_bot"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }

tokio = { version = "1.26.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
poise = "0.5.5"
#regex = "1.8.3"
dotenvy = "0.15.7"
#rand = "0.8.5"
sea-orm = { version = "^0", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
uuid = { version = "1.3.3", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics"
] }
